--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Escape Velocity</a></h1>
-							<p>A free responsive site template by HTML5 UP</p>
+							<h1><a href="index.html">Peter Smith</a></h1>
+							<p>Astrophysics PhD Student Specializing in Exoplanet Atmospheres</p>
 						</div>
 
 					<!-- Nav -->
@@ -30,9 +30,9 @@
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
-										<li><a href="#">Lorem ipsum</a></li>
-										<li><a href="#">Magna veroeros</a></li>
-										<li><a href="#">Etiam nisl</a></li>
+										<li><a href="#">First dropdown</a></li>
+										<li><a href="#">Second dropdown</a></li>
+										<li><a href="#">third dropdown</a></li>
 										<li>
 											<a href="#">Sed consequat</a>
 											<ul>
@@ -56,9 +56,9 @@
 
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
-					<div class="title">The Introduction</div>
+					<div class="title">About Me</div>
 					<div class="container">
-						<p class="style1">So in case you were wondering what this is all about ...</p>
+						<p class="style1">Here are some words about me...</p>
 						<p class="style2">
 							Escape Velocity is a free responsive<br class="mobile-hide" />
 							site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a>
@@ -74,7 +74,7 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">The Details</div>
+					<div class="title">My Research</div>
 					<div class="container">
 
 						<!-- Image -->
