--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
-										<li><a href="#">First dropdown</a></li>
+									<!-- 	<li><a href="#">First dropdown</a></li>
 										<li><a href="#">Second dropdown</a></li>
 										<li><a href="#">third dropdown</a></li>
 										<li>
@@ -45,10 +45,10 @@
 										</li>
 										<li><a href="#">Nisl tempus</a></li>
 									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								</li> -->
+								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
+								<li><a href="right-sidebar.html">A Second Page</a></li>
+								<!-- <li><a href="no-sidebar.html">No Sidebar</a></li> -->
 							</ul>
 						</nav>
 
