--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li>
+								<!-- <li>
 									<a href="#">Dropdown</a>
-									<ul>
+									<ul> -->
 									<!-- 	<li><a href="#">First dropdown</a></li>
 										<li><a href="#">Second dropdown</a></li>
 										<li><a href="#">third dropdown</a></li>
@@ -58,16 +58,18 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
 					<div class="container">
-						<p class="style1">Here are some words about me...</p>
-						<p class="style2">
+						<p class="style1">I'm is an Astrophysics PhD student in ASU's School of Earth and Space Exploration. I'm a native Texan and earned my BS in astrophysics from the University of Texas in 2020. In my spare time, I love to bake or read about history. I also enjoys hiking and playing strategy games. I am also passionate about astronomy education and outreach and am a member of the SESE Astronomy Education Research Group. 
+
+						<p class="style1"> My research focuses on ground-based characterization of exoplanets at high spectral resolution, and my work involves both the analysis of observational data and constructing atmospheric models. From data, I use Bayesian statistical methods called retrievals to place robust constraints on the properties of exoplanets, such as molecular abundances and thermal structure. My theoretical work incorporates 3D atmospheric effects into 1D analytic models that can be used in retrievals with high computational efficiency. I am currently focused on short period gaseous planets called "hot Jupiters", but I have experience modeling the atmospheres of rocky planets as well. My research requires a broad skillset including radiative transfer, thermodynamics, statistics, and high performance computing.</p>
+						<!-- <p class="style2">
 							Escape Velocity is a free responsive<br class="mobile-hide" />
 							site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a>
 						</p>
 						<p class="style3">It's <strong>responsive</strong>, built on <strong>HTML5</strong> and <strong>CSS3</strong>, and released for
 						free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>, so use it for any of
-						your personal or commercial projects &ndash; just be sure to credit us!</p>
+						your personal or commercial projects &ndash; just be sure to credit us!</p> -->
 						<ul class="actions">
-							<li><a href="#" class="button style3 large">Proceed</a></li>
+							<li><a href="right-sidebar.html" class="button style3 large">Learn More About My research</a></li>
 						</ul>
 					</div>
 				</section>
