--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Escape Velocity by HTML5 UP</title>
+		<title>Peter Smith</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -47,7 +47,9 @@
 									</ul>
 								</li> -->
 								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
-								<li><a href="right-sidebar.html">A Second Page</a></li>
+								<li><a href="right-sidebar.html">Exoplanets</a></li>
+								<li><a href="right-sidebar.html">Education</a></li>
+								<li><a href="right-sidebar.html">Resources</a></li>
 								<!-- <li><a href="no-sidebar.html">No Sidebar</a></li> -->
 							</ul>
 						</nav>
@@ -58,7 +60,7 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
 					<div class="container">
-						<p class="style1">I'm is an Astrophysics PhD student in ASU's School of Earth and Space Exploration. I'm a native Texan and earned my BS in astrophysics from the University of Texas in 2020. In my spare time, I love to bake or read about history. I also enjoys hiking and playing strategy games. I am also passionate about astronomy education and outreach and am a member of the SESE Astronomy Education Research Group. 
+						<p class="style1">I'm an Astrophysics PhD student in ASU's School of Earth and Space Exploration. I'm a native Texan and earned my BS in astrophysics from the University of Texas in 2020. In my spare time, I love to bake or read about history. I also enjoy hiking and playing strategy games. I am also passionate about astronomy education and outreach and am a member of the SESE Astronomy Education Research Group. 
 
 						<p class="style1"> My research focuses on ground-based characterization of exoplanets at high spectral resolution, and my work involves both the analysis of observational data and constructing atmospheric models. From data, I use Bayesian statistical methods called retrievals to place robust constraints on the properties of exoplanets, such as molecular abundances and thermal structure. My theoretical work incorporates 3D atmospheric effects into 1D analytic models that can be used in retrievals with high computational efficiency. I am currently focused on short period gaseous planets called "hot Jupiters", but I have experience modeling the atmospheres of rocky planets as well. My research requires a broad skillset including radiative transfer, thermodynamics, statistics, and high performance computing.</p>
 						<!-- <p class="style2">
