--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<div class="title">About Me</div>
 					<div class="container">
 							<a href="#" class="image featured">
-								<img src="images/headshot.jpg" width="60" length ="80" alt="" />
+								<img src="images/headshot.jpg" width="120" height ="160" alt="" />
 							</a>
 
 						<p class="style1">I'm an Astrophysics PhD student in ASU's School of Earth and Space Exploration. I'm a native Texan and earned my BS in astrophysics from the University of Texas in 2020. In my spare time, I love to bake or read about history. I also enjoy hiking and playing strategy games. I am also passionate about astronomy education and outreach and am a member of the SESE Astronomy Education Research Group. 
@@ -105,7 +105,7 @@
 									<h3><a href="#">M-dwarf planets with JWST</a></h3>
 									<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
 									<ul class="actions">
-										<li><a href="#" class="button style1">Learn More</a></li>
+										<li><a href="#" class="button style1">More</a></li>
 									</ul>
 								</section>
 							</div>
@@ -115,7 +115,7 @@
 									<h3><a href="#">Citizen science in the classroom</a></h3>
 									<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
 									<ul class="actions">
-										<li><a href="#" class="button style1">Learn More</a></li>
+										<li><a href="#" class="button style1">More</a></li>
 									</ul>
 								</section>
 							</div>
