--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
 						free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>, so use it for any of
 						your personal or commercial projects &ndash; just be sure to credit us!</p> -->
 						<ul class="actions">
-							<li><a href="right-sidebar.html" class="button style3 large">My CV</a></li>
+							<li><a href="right-sidebar.html" class="button style3 large">My CV (coming soon)</a></li>
 						</ul>
+						<header class="style1">
+							<h2>This website is a work in progress</h2>
+							<p>Please be patient while I contruct the best user experience</p>
+						</header>
 					</div>
 				</section>
 
@@ -97,7 +101,7 @@
 									<h3><a href="#">Exoplanets at high spectral resolution</a></h3>
 									<p>Most exoplanet observations are taken with low spectral resolution space-based observatories to avoid telluric contamination (absorption from the Earth's atmosphere). An emerging method for high resolution ground-based exoplanet characterization is high resolution cross correlation spectroscopy (HRCCS). Using HRCCS, we can use a planet's time resolved Doppler shift to separate its signal from telluric features, enabling robust measurements of the planet's atmosphere.</p>
 									<ul class="actions">
-										<li><a href="right-sidebar.html" class="button style1">More</a></li>
+										<li><a href="right-sidebar.html" class="button style1">More (coming soon)</a></li>
 									</ul>
 								</section>
 							</div>
@@ -107,7 +111,7 @@
 									<h3><a href="#">M-dwarf planets with JWST</a></h3>
 									<p>M-dwarfs are the most common type of star in the local galaxy, and due to their low temperatures and mass, it's easier to find exoplanets around them. However, habitability around these stars is uncertain due to frequent flares and high stellar winds, which could blow away a potential atmosphere. Rocky planets around M-dwarfs will be the subject of many studies with the James Webb Space Telescope (JWST), but its important to know just how capable JWST really is for observing small planets.</p>
 									<ul class="actions">
-										<li><a href="right-sidebar.html" class="button style1">More</a></li>
+										<li><a href="right-sidebar.html" class="button style1">More (coming soon)</a></li>
 									</ul>
 								</section>
 							</div>
@@ -117,7 +121,7 @@
 									<h3><a href="#">Citizen science in the classroom</a></h3>
 									<p>Citizen science allows non-professional scientists to classify large datasets that would otherwise be impossible for a small team of scientists to analyze alone. Incorporating citizen science activities in the classroom can help students learn more about the scientific method and realize that even people without scientific backgrounds can meaningfully contribute to our undertanding of the universe. With these kinds of activities integrated into classroom lessons, we can also address barriers to participation in STEM for non majority groups.</p>
 									<ul class="actions">
-										<li><a href="right-sidebar.html" class="button style1">More</a></li>
+										<li><a href="right-sidebar.html" class="button style1">More (coming soon)</a></li>
 									</ul>
 								</section>
 							</div>
