--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 					<div class="container">
 
 
-						<a href="#" class="image featured">
-							<img src="images/headshot.jpg" width="120" height ="160" alt="" />
-						</a>
+						<!-- <a href="#" class="image featured"> -->
+						<img src="images/headshot.jpg" width="120" height ="160" alt="" />
+						<!-- </a> -->
 
 						<p class="style1">I'm an Astrophysics PhD student in ASU's School of Earth and Space Exploration. I'm a native Texan and earned my BS in astrophysics from the University of Texas in 2020. In my spare time, I love to bake or read about history. I also enjoy hiking and playing strategy games. I am also passionate about astronomy education and outreach and am a member of the SESE Astronomy Education Research Group. 
 
