--- a/coming-soon.html
+++ b/coming-soon.html
@@ -6,12 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Peter Smith</title>
+		<title>Peter Smith - Coming Soon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="homepage is-preload">
+	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -19,20 +19,20 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Peter Smith</a></h1>
-							<p>Astrophysics PhD Student Specializing in Exoplanet Atmospheres</p>
+							<h1><a href="index.html">Coming Soon :)</a></h1>
+							<p>This page is not yet available</p>
 						</div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								<!-- <li>
 									<a href="#">Dropdown</a>
-									<ul> -->
-									<!-- 	<li><a href="#">First dropdown</a></li>
-										<li><a href="#">Second dropdown</a></li>
-										<li><a href="#">third dropdown</a></li>
+									<ul>
+										<li><a href="#">Lorem ipsum</a></li>
+										<li><a href="#">Magna veroeros</a></li>
+										<li><a href="#">Etiam nisl</a></li>
 										<li>
 											<a href="#">Sed consequat</a>
 											<ul>
@@ -46,47 +46,66 @@
 										<li><a href="#">Nisl tempus</a></li>
 									</ul>
 								</li> -->
-								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
-								<li><a href="coming-soon.html">Exoplanets</a></li>
-								<li><a href="coming-soon.html">Education</a></li>
-								<li><a href="coming-soon.html">Resources</a></li>
-								<!-- <li><a href="no-sidebar.html">No Sidebar</a></li> -->
+								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li>
+								<li><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li class="current"><a href="no-sidebar.html">No Sidebar</a></li> -->
 							</ul>
 						</nav>
 
 				</section>
 
-			<!-- Intro -->
-				<section id="intro" class="wrapper style1">
-					<div class="title">About Me</div>
+			<!-- Main -->
+				<!-- <div id="main" class="wrapper style2">
+					<div class="title">No Sidebar</div>
 					<div class="container">
+ -->
+						<!-- Content -->
+							<!-- <div id="content">
+								<article class="box post">
+									<header class="style1">
+										<h2>Lorem ipsum dolor sit amet magna egestas<br class="mobile-hide" />
+										morbi bibendum sed malesuada</h2>
+										<p>Tempus feugiat veroeros sed nullam dolore</p>
+									</header>
+									<a href="#" class="image featured">
+										<img src="images/pic01.jpg" alt="" />
+									</a>
+									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
+									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
+									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
+									tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
+									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
+									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
+									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
+									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
+									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
+									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
+									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
+									amet risus elit.</p>
+									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
+									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
+									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
+									eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
+									tincidunt felis sagittis eget. Donec elementum ligula dignissim sem pulvinar non semper
+									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
+									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
+									tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+									posuere cubilia.</p>
+									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
+									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
+									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
+									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
+									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
+									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
+									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
+									amet risus elit.</p>
+								</article>
+							</div> -->
 
+					<!-- </div>
+				</div> -->
 
-						<!-- <a href="#" class="image featured"> -->
-						<img src="images/headshot.jpg" width="360" height ="480" alt="" />
-						<!-- </a> -->
-
-						<p class="style1">I'm an Astrophysics PhD student in ASU's School of Earth and Space Exploration. I'm a native Texan and earned my BS in astrophysics from the University of Texas in 2020. In my spare time, I love to bake or read about history. I also enjoy hiking and playing strategy games. I am also passionate about astronomy education and outreach and am a member of the SESE Astronomy Education Research Group. 
-
-						<p class="style1"> My research focuses on ground-based characterization of exoplanets at high spectral resolution, and my work involves both the analysis of observational data and constructing atmospheric models. From data, I use Bayesian statistical methods called retrievals to place robust constraints on the properties of exoplanets, such as molecular abundances and thermal structure. My theoretical work incorporates 3D atmospheric effects into 1D analytic models that can be used in retrievals with high computational efficiency. I am currently focused on short period gaseous planets called "hot Jupiters", but I have experience modeling the atmospheres of rocky planets as well. My research requires a broad skillset including radiative transfer, thermodynamics, statistics, and high performance computing.</p>
-						<!-- <p class="style2">
-							Escape Velocity is a free responsive<br class="mobile-hide" />
-							site template by <a href="http://html5up.net" class="nobr">HTML5 UP</a>
-						</p>
-						<p class="style3">It's <strong>responsive</strong>, built on <strong>HTML5</strong> and <strong>CSS3</strong>, and released for
-						free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>, so use it for any of
-						your personal or commercial projects &ndash; just be sure to credit us!</p> -->
-						<ul class="actions">
-							<li><a href="Peter Smith CV.pdf" class="button style3 large">My CV</a></li>
-						</ul>
-						<header class="style1">
-							<h2>This website is a work in progress</h2>
-							<p>Please be patient while I contruct the best user experience</p>
-						</header>
-					</div>
-				</section>
-
-
+			<!-- Highlights -->
 				<section id="highlights" class="wrapper style3">
 					<header class="style1">
 						<h2>I have several past and ongoing projects and interests:</h2>
@@ -101,7 +120,7 @@
 									<h3><a href="#">Exoplanets at high spectral resolution</a></h3>
 									<p>Most exoplanet observations are taken with low spectral resolution space-based observatories to avoid telluric contamination (absorption from the Earth's atmosphere). An emerging method for high resolution ground-based exoplanet characterization is high resolution cross correlation spectroscopy (HRCCS). Using HRCCS, we can use a planet's time resolved Doppler shift to separate its signal from telluric features, enabling robust measurements of the planet's atmosphere.</p>
 									<ul class="actions">
-										<li><a href="coming-soon.html" class="button style1">More (coming soon)</a></li>
+										<li><a href="#" class="button style1">More (coming soon)</a></li>
 									</ul>
 								</section>
 							</div>
@@ -111,7 +130,7 @@
 									<h3><a href="#">M-dwarf planets with JWST</a></h3>
 									<p>M-dwarfs are the most common type of star in the local galaxy, and due to their low temperatures and mass, it's easier to find exoplanets around them. However, habitability around these stars is uncertain due to frequent flares and high stellar winds, which could blow away a potential atmosphere. Rocky planets around M-dwarfs will be the subject of many studies with the James Webb Space Telescope (JWST), but its important to know just how capable JWST really is for observing small planets.</p>
 									<ul class="actions">
-										<li><a href="coming-soon.html" class="button style1">More (coming soon)</a></li>
+										<li><a href="#" class="button style1">More (coming soon)</a></li>
 									</ul>
 								</section>
 							</div>
@@ -121,7 +140,7 @@
 									<h3><a href="#">Citizen science in the classroom</a></h3>
 									<p>Citizen science allows non-professional scientists to classify large datasets that would otherwise be impossible for a small team of scientists to analyze alone. Incorporating citizen science activities in the classroom can help students learn more about the scientific method and realize that even people without scientific backgrounds can meaningfully contribute to our undertanding of the universe. With these kinds of activities integrated into classroom lessons, we can also address barriers to participation in STEM for non majority groups.</p>
 									<ul class="actions">
-										<li><a href="coming-soon.html" class="button style1">More (coming soon)</a></li>
+										<li><a href="#" class="button style1">More (coming soon)</a></li>
 									</ul>
 								</section>
 							</div>
@@ -129,80 +148,17 @@
 					</div>
 				</section>
 
-
-			<!-- Main -->
-				<section id="main" class="wrapper style2">
-					<div class="title">Resources (coming soon)</div>
-					<div class="container">
-
-						<!-- Image -->
-							<!-- <a href="#" class="image featured">
-								<img src="../../exoplanet background.jpg" alt="" />
-							</a> -->
-
-						<!-- Features -->
-								<!-- <div class="feature-list">
-									<div class="row">
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon fa-comment">Mattis velit diam vulputate</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon solid fa-sync">Lorem ipsum dolor sit veroeros</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon fa-image">Pretium phasellus justo lorem</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon solid fa-cog">Tempus sed pretium orci</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon solid fa-wrench">Aliquam consequat et feugiat</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-										<div class="col-6 col-12-medium">
-											<section>
-												<h3 class="icon solid fa-check">Dolore laoreet aliquam mattis</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
-											</section>
-										</div>
-									</div> -->
-								</div>
-								<ul class="actions special">
-									<li><a href="#" class="button style1 large">Get Started</a></li>
-									<li><a href="#" class="button style2 large">More Info</a></li>
-								</ul>
-							</section>
-
-					</div>
-				</section>
-
-			<!-- Highlights -->
-				
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
-					<div class="title">The Rest Of It</div>
+					<div class="title">Contact Me</div>
 					<div class="container">
-						<header class="style1">
+						<!-- <header class="style1">
 							<h2>Ipsum sapien elementum portitor?</h2>
 							<p>
 								Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
 								Nam pharetra laoreet imperdiet volutpat etiam feugiat.
 							</p>
-						</header>
+						</header> -->
 						<div class="row">
 							<div class="col-6 col-12-medium">
 
