--- a/exoplanets.html
+++ b/exoplanets.html
@@ -48,7 +48,7 @@
 										<img src="images/exoplanet background.png" alt="" />
 									</a>
 									<header>
-										<p> style="font-size:11px"> NASA/JPL-Caltech/Lizbeth B. De La Torre </p>
+										<p> NASA/JPL-Caltech/Lizbeth B. De La Torre </p>
 									</header>
 									<p>Planets outside our solar system are called <b> exoplanets</b>. The first exoplanets were discovered in the 1990’s, and since then we’ve confirmed more than 4300 as of this writing. While we’ve only begun to scratch the surface of all the exoplanets in the galaxy, we’ve already uncovered a beautiful diversity among alien worlds. The first exoplanets discovered were <b> hot Jupiters</b>, gaseous planets in extremely close orbits around their stars. One year for hot Jupiters may just be a few days, and the hottest can be upwards of 4000 Kelvin (the surface of the sun is 5600 Kelvin). Next are <b>sub Neptunes</b>, which as their name suggests, are also gaseous planets but which are smaller than Neptune. These two types of planets are peculiar as there are none like them in our own solar system</p>
 									<p>Of course, there are also <b>terrestrial</b> planets, rocky like the Earth. These can also be quite extreme, with liquid magma oceans or stationary hurricanes on permanent daysides. However, we know of some that orbit within their star’s <b>habitable zone</b>, traditionally defined as where liquid water on the surface could exist. It’s hard to pin down whether a planet is truly habitable as there are many factors at play, like stellar activity or the properties of the planet’s atmosphere.</p>
@@ -68,7 +68,7 @@
 									<a href="#" class="image featured">
 										<img src="images/exoplanet background.jpg" alt="" />
 									</a>	
-									<header> <p> style="font-size:11px">NASA-JPL/Caltech </p> </header>						
+									<header> <p> NASA-JPL/Caltech </p> </header>						
 									<p> The most common type of star are <b> M-dwarfs</b>. These stars are much smaller and cooler than the sun, but they make up for 70% of all stars in the Milky Way. Because they are the smallest and faintest type of star, M-dwarfs are also the easiest stars to find exoplanets around, especially rocky planets. Does that mean it’s likely we’ll find the first truly habitable alien world orbiting a M-dwarf? Well, it’s complicated. </p>
 									<p> Because M-dwarfs are so cool, their habitable zone is much closer than compared to other stars. When you get very close to your star though is when you start running into problems. First, a planet in the habitable zone of an M-dwarf is likely to be <b> tidally locked</b>. That means one side of the planet always faces the star, while the other always faces away. Permanent day on one side, permanent night on the other, and eternal twilight between them. Our moon is like this - the same side always faces the Earth. Tidal locking can lead to extreme temperature differences on the planet, and the planet's oceans may evaporate on the dayside while its atmosphere freezes out on the night side. </p>
 									<p> Additionally, you have to deal with <b> stellar activity</b>. M-dwarfs are like interstellar babies throwing temper tantrums. In their early lives, they have frequent flaring events and high stellar wind. Both of these could blow away the planet’s atmosphere and dessicate the surface. M-dwarfs also have high levels of UV radiation. Be sure to pack some sunscreen! </p>
