--- a/index.html
+++ b/index.html
@@ -194,13 +194,12 @@
 				
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
-					<div class="title">The Rest Of It</div>
+					<div class="title">Contact Me</div>
 					<div class="container">
 						<header class="style1">
-							<h2>Ipsum sapien elementum portitor?</h2>
+							<h2>Want to get in touch?</h2>
 							<p>
-								Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
-								Nam pharetra laoreet imperdiet volutpat etiam feugiat.
+								If you have any questions or comments, or if you would like to collaborate in the future, please fill out the form below. I'll get back to you as soon as I can.
 							</p>
 						</header>
 						<div class="row">
@@ -208,7 +207,7 @@
 
 								<!-- Contact Form -->
 									<section>
-										<form method="post" action="#">
+										<form method="post" action="mailto:petercbsmith@asu.edu">
 											<div class="row gtr-50">
 												<div class="col-6 col-12-small">
 													<input type="text" name="name" id="contact-name" placeholder="Name" />
@@ -235,7 +234,7 @@
 								<!-- Contact -->
 									<section class="feature-list small">
 										<div class="row">
-											<div class="col-6 col-12-small">
+											<!-- <div class="col-6 col-12-small">
 												<section>
 													<h3 class="icon solid fa-home">Mailing Address</h3>
 													<p>
@@ -244,43 +243,43 @@
 														Nashville, TN 00000
 													</p>
 												</section>
-											</div>
+											</div> -->
 											<div class="col-6 col-12-small">
 												<section>
 													<h3 class="icon solid fa-comment">Social</h3>
 													<p>
-														<a href="#">@untitled-corp</a><br />
-														<a href="#">linkedin.com/untitled</a><br />
-														<a href="#">facebook.com/untitled</a>
+														<a href="https://twitter.com/ExoplanetPete">@ExoplanetPete</a><br />
+														<a href="https://www.linkedin.com/in/peter-smith-805526158/">linkedin</a><br />
+													
 													</p>
 												</section>
 											</div>
-											<div class="col-6 col-12-small">
+											<!-- <div class="col-6 col-12-small">
 												<section>
 													<h3 class="icon solid fa-envelope">Email</h3>
 													<p>
 														<a href="#">info@untitled.tld</a>
 													</p>
 												</section>
-											</div>
-											<div class="col-6 col-12-small">
+											</div> -->
+											<!-- <div class="col-6 col-12-small">
 												<section>
 													<h3 class="icon solid fa-phone">Phone</h3>
 													<p>
 														(000) 555-0000
 													</p>
 												</section>
-											</div>
+											</div> -->
 										</div>
 									</section>
 
 							</div>
 						</div>
-						<div id="copyright">
+						<!-- <div id="copyright">
 							<ul>
 								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
-						</div>
+						</div> -->
 					</div>
 				</section>
 
